paperless/IngressRoute-paperless-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-route
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.anderwerse.de`)
      services:
        - name: paperless
          namespace: paperless
          port: 8000
  tls:
    secretName: paperless-tls-certificate
